src/main/java/org/anima/antlr/CompiladorLangParser.java
// Generated from /home/fabiano/IdeaProjects/A3-TCC/src/main/java/org/anima/antlr/CompiladorLangParser.g4 by ANTLR 4.13.2
package org.anima.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CompiladorLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_INICIO=1, KW_FIM=2, KW_DECLARE=3, KW_INTEIRO=4, KW_REAL=5, KW_TEXTO=6, 
		KW_SE=7, KW_ENTAO=8, KW_SENAO=9, KW_ENQUANTO=10, KW_PARA=11, KW_FACA=12, 
		KW_LEIA=13, KW_ESCREVA=14, KW_E=15, KW_OU=16, KW_NAO=17, OP_SOMA=18, OP_SUBTRACAO=19, 
		OP_MULTIPLICACAO=20, OP_DIVISAO=21, OP_ATRIBUICAO=22, OP_IGUAL=23, OP_DIFERENTE=24, 
		OP_MENOR=25, OP_MAIOR=26, OP_MENOR_IGUAL=27, OP_MAIOR_IGUAL=28, ABRE_PARENTESES=29, 
		FECHA_PARENTESES=30, ABRE_CHAVES=31, FECHA_CHAVES=32, PONTO_VIRGULA=33, 
		VIRGULA=34, NUMERO_REAL=35, NUMERO_INTEIRO=36, TEXTO_LITERAL=37, IDENTIFICADOR=38, 
		WS=39, COMENTARIO_LINHA=40;
	public static final int
		RULE_programa = 0, RULE_listaComandos = 1, RULE_comando = 2, RULE_declaracao = 3, 
		RULE_tipo = 4, RULE_atribuicao = 5, RULE_estruturaCondicional = 6, RULE_estruturaRepeticao = 7, 
		RULE_loopEnquanto = 8, RULE_loopPara = 9, RULE_inicializacaoLoop = 10, 
		RULE_incrementoLoop = 11, RULE_declaracaoLoop = 12, RULE_atribuicaoLoop = 13, 
		RULE_comandoLeitura = 14, RULE_comandoEscrita = 15, RULE_expressao = 16, 
		RULE_expressaoE = 17, RULE_expressaoRelacional = 18, RULE_expressaoAditiva = 19, 
		RULE_expressaoMultiplicativa = 20, RULE_expressaoUnaria = 21, RULE_expressaoPrimaria = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "listaComandos", "comando", "declaracao", "tipo", "atribuicao", 
			"estruturaCondicional", "estruturaRepeticao", "loopEnquanto", "loopPara", 
			"inicializacaoLoop", "incrementoLoop", "declaracaoLoop", "atribuicaoLoop", 
			"comandoLeitura", "comandoEscrita", "expressao", "expressaoE", "expressaoRelacional", 
			"expressaoAditiva", "expressaoMultiplicativa", "expressaoUnaria", "expressaoPrimaria"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'inicio'", "'fim'", "'declare'", "'inteiro'", "'real'", "'texto'", 
			"'se'", "'entao'", "'senao'", "'enquanto'", "'para'", "'faca'", "'leia'", 
			"'escreva'", "'e'", "'ou'", "'nao'", "'+'", "'-'", "'*'", "'/'", "'='", 
			"'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'('", "')'", "'{'", "'}'", 
			"';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KW_INICIO", "KW_FIM", "KW_DECLARE", "KW_INTEIRO", "KW_REAL", "KW_TEXTO", 
			"KW_SE", "KW_ENTAO", "KW_SENAO", "KW_ENQUANTO", "KW_PARA", "KW_FACA", 
			"KW_LEIA", "KW_ESCREVA", "KW_E", "KW_OU", "KW_NAO", "OP_SOMA", "OP_SUBTRACAO", 
			"OP_MULTIPLICACAO", "OP_DIVISAO", "OP_ATRIBUICAO", "OP_IGUAL", "OP_DIFERENTE", 
			"OP_MENOR", "OP_MAIOR", "OP_MENOR_IGUAL", "OP_MAIOR_IGUAL", "ABRE_PARENTESES", 
			"FECHA_PARENTESES", "ABRE_CHAVES", "FECHA_CHAVES", "PONTO_VIRGULA", "VIRGULA", 
			"NUMERO_REAL", "NUMERO_INTEIRO", "TEXTO_LITERAL", "IDENTIFICADOR", "WS", 
			"COMENTARIO_LINHA"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CompiladorLangParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CompiladorLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode KW_INICIO() { return getToken(CompiladorLangParser.KW_INICIO, 0); }
		public ListaComandosContext listaComandos() {
			return getRuleContext(ListaComandosContext.class,0);
		}
		public TerminalNode KW_FIM() { return getToken(CompiladorLangParser.KW_FIM, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorLangParserListener ) ((CompiladorLangParserListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorLangParserListener ) ((CompiladorLangParserListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompiladorLangParserVisitor ) return ((CompiladorLangParserVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(KW_INICIO);
			setState(47);
			listaComandos();
			setState(48);
			match(KW_FIM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaComandosContext extends ParserRuleContext {
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public ListaComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaComandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorLangParserListener ) ((CompiladorLangParserListener)listener).enterListaComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorLangParserListener ) ((CompiladorLangParserListener)listener).exitListaComandos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompiladorLangParserVisitor ) return ((CompiladorLangParserVisitor<? extends T>)visitor).visitListaComandos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaComandosContext listaComandos() throws RecognitionException {
		ListaComandosContext _localctx = new ListaComandosContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_listaComandos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 274877934728L) != 0)) {
				{
				{
				setState(50);
				comando();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoContext extends ParserRuleContext {
		public DeclaracaoContext declaracao() {
			return getRuleContext(DeclaracaoContext.class,0);
		}
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public EstruturaCondicionalContext estruturaCondicional() {
			return getRuleContext(EstruturaCondicionalContext.class,0);
		}
		public EstruturaRepeticaoContext estruturaRepeticao() {
			return getRuleContext(EstruturaRepeticaoContext.class,0);
		}
		public ComandoLeituraContext comandoLeitura() {
			return getRuleContext(ComandoLeituraContext.class,0);
		}
		public ComandoEscritaContext comandoEscrita() {
			return getRuleContext(ComandoEscritaContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorLangParserListener ) ((CompiladorLangParserListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorLangParserListener ) ((CompiladorLangParserListener)listener).exitComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompiladorLangParserVisitor ) return ((CompiladorLangParserVisitor<? extends T>)visitor).visitComando(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comando);
		try {
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_DECLARE:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				declaracao();
				}
				break;
			case IDENTIFICADOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				atribuicao();
				}
				break;
			case KW_SE:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				estruturaCondicional();
				}
				break;
			case KW_ENQUANTO:
			case KW_PARA:
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				estruturaRepeticao();
				}
				break;
			case KW_LEIA:
				enterOuterAlt(_localctx, 5);
				{
				setState(60);
				comandoLeitura();
				}
				break;
			case KW_ESCREVA:
				enterOuterAlt(_localctx, 6);
				{
				setState(61);
				comandoEscrita();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoContext extends ParserRuleContext {
		public Token id;
		public ExpressaoContext init;
		public TerminalNode KW_DECLARE() { return getToken(CompiladorLangParser.KW_DECLARE, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode PONTO_VIRGULA() { return getToken(CompiladorLangParser.PONTO_VIRGULA, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(CompiladorLangParser.IDENTIFICADOR, 0); }
		public TerminalNode OP_ATRIBUICAO() { return getToken(CompiladorLangParser.OP_ATRIBUICAO, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorLangParserListener ) ((CompiladorLangParserListener)listener).enterDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorLangParserListener ) ((CompiladorLangParserListener)listener).exitDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompiladorLangParserVisitor ) return ((CompiladorLangParserVisitor<? extends T>)visitor).visitDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(KW_DECLARE);
			setState(65);
			tipo();
			setState(66);
			((DeclaracaoContext)_localctx).id = match(IDENTIFICADOR);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_ATRIBUICAO) {
				{
				setState(67);
				match(OP_ATRIBUICAO);
				setState(68);
				((DeclaracaoContext)_localctx).init = expressao();
				}
			}

			setState(71);
			match(PONTO_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
